--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,6 +9,7 @@
   backdrop-filter: blur(40px);
   border-bottom: 2px solid #eef1f8;
   z-index: 1000;
+  padding: 0 5px;
 }
 
 .navbar {
