--- a/src/Components/Todo/CreateTodo/CreateTodo.css
+++ b/src/Components/Todo/CreateTodo/CreateTodo.css
@@ -102,7 +102,10 @@
   .todo-card {
     width: 90%; /* Adjust width for smaller screens */
     top: 60%; /* Adjusted top position for smartphones */
-    transform: translate(-50%, -50%); /* Ensure it remains centered horizontally */
+    transform: translate(
+      -50%,
+      -50%
+    ); /* Ensure it remains centered horizontally */
     padding: 10px; /* Reduce padding for smaller screens */
     max-height: none; /* Ensure the card does not exceed the screen height */
   }
